--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "13.5.2",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.2.2",
+    "zustand": "^4.4.1"
   }
 }
